@@ -1,18 +1,18 @@
 pkgbase = make7libre
 	pkgdesc = Free/libre block match puzzle game
 	pkgver = 0.8.6
-	pkgrel = 1
-	url = https://gitlab.com/felandral/make7libre
+	pkgrel = 2
+	url = https://make7libre.nongnu.org
 	changelog = ChangeLog
 	arch = x86_64
 	license = GPL3
-	makedepends = intltool
+	makedepends = intltool itstool
 	depends = gtkmm3
-	source = https://gitlab.com/felandral/make7libre/raw/dist/make7libre-0.8.6.tar.gz
-	source = https://gitlab.com/felandral/make7libre/raw/dist/make7libre-0.8.6.tar.gz.sig
+	source = http://download.savannah.gnu.org/releases/make7libre/make7libre-0.8.6.tar.gz
+	source = http://download.savannah.gnu.org/releases/make7libre/make7libre-0.8.6.tar.gz.sig
 	validpgpkeys = 0F4775FC247B70595AD7573513907AE74D527673
-	md5sums = 128aca467441a264827211ef2487d5db
-	md5sums = e5f1e385e184b7a1fca8b8ba0100411e
+	md5sums = fdf792b80a37c7dcf1fd11971af1a107
+	md5sums = 25acc5b64d6d291967556f2f7ce761fb
 
 pkgname = make7libre
 
