@@ -1,18 +1,18 @@
 # Maintainer: Félicien Pillot <felicien.pillot@member.fsf.org>
 pkgname=make7libre
 pkgver=0.8.6
-pkgrel=1
+pkgrel=2
 pkgdesc="Free/libre block match puzzle game"
 arch=('x86_64')
-url="https://gitlab.com/felandral/make7libre"
+url="http://make7libre.nongnu.org"
 license=('GPL3')
 depends=('gtkmm3')
-makedepends=('intltool')
+makedepends=('intltool' 'itstool')
 changelog=ChangeLog
-source=("https://gitlab.com/felandral/make7libre/raw/dist/${pkgname}-${pkgver}.tar.gz" "https://gitlab.com/felandral/make7libre/raw/dist/${pkgname}-${pkgver}.tar.gz.sig")
+source=("http://download.savannah.gnu.org/releases/make7libre/${pkgname}-${pkgver}.tar.gz" "http://download.savannah.gnu.org/releases/make7libre/${pkgname}-${pkgver}.tar.gz.sig")
 validpgpkeys=('0F4775FC247B70595AD7573513907AE74D527673')
-md5sums=("128aca467441a264827211ef2487d5db" \
-         "e5f1e385e184b7a1fca8b8ba0100411e")
+md5sums=("fdf792b80a37c7dcf1fd11971af1a107" \
+         "25acc5b64d6d291967556f2f7ce761fb")
 
 build() {
 	cd "$pkgname-$pkgver"
